CHEP13: Added new graph and table

--- a/CHEP 13/poster.tex
+++ b/CHEP 13/poster.tex
@@ -135,9 +135,9 @@
 
     %\begin{column}{\onecolwid}
 	
-		% \begin{center}
-		% 	\includegraphics[scale=0.6]{"images/experiment_vs_curvature"}
-		% \end{center}
+		\begin{center}
+			\includegraphics[scale=1]{"images/results_games"}
+		 \end{center}
 	
       \begin{block}{Experiment}
         \rmfamily{
@@ -165,9 +165,18 @@
 		\begin{block}{Results}
 			\rmfamily{
 			
-			
-			
-			
+			\begin{tabular}{ l | c | c | c | c | r }
+				Game & Fun & Teaching & Evaluation & Usefulness & Total \\
+				Chester Pets & 5 & 3 & 3 & 3 & 14 \\
+				Space Recycler & 2 & 3 & 4 & 3 & 12 \\
+				Math Adder & 4 & 4 & 1 & 3 & 12 \\
+				Math Hunt & 1 & 1 & 2 & 1 & 5 \\
+				Cannon Fodder & 0 & 1 & 1 & 1 & 3 \\
+				Dr. Math & 0 & 0 & 0 & 0 & 0 \\
+				No game listed & 0 & 0 & 1 & 1 & 2 \\
+				Total & 12 & 12 & 12 & 12 & 48 \\
+			\end{tabular}	
+
 			}	
 	\end{block}
 	  \vskip2ex
