CHEP13: Bulked up Conspyre's section

--- a/CHEP 13/poster.tex
+++ b/CHEP 13/poster.tex
@@ -105,7 +105,7 @@
 \begin{column}{\onecolwid}
     \begin{block}{Conspyre}
         \rmfamily{
-    		Conspyre is a networking library and framework to allow for easy storage and retrieval of game information. 
+    		Conspyre is a cloud-based networking system built to work in conjunction with Spyral. The system is designed with two parts: (a) a client library for XO games that talks to (b) a web framework that can store and retrieve data and provides a portal for teachers. Using this sytem, XO developers can persist data between students' play sessions and enable communication between teachers and students. As it is used primarily by novice developers with limited experience, Conspyre is written in Python and built on a scaffolding paradigm by which students can quickly develop functional applications with a minimal knowledge of web development.
 		}
 	\end{block}
 
