Some formatting fixes, label fix

--- a/CHEP 13/poster.tex
+++ b/CHEP 13/poster.tex
@@ -134,9 +134,9 @@ Five years ago, CCCS received 1,400 XO laptops, low-cost computers developed by 
     \vspace{3in}
   
 \begin{figure}[h]
-    \label{reaction}
 	\includegraphics[width=\twocolwid]{"images/results_games"}
-    \caption{Results of a survey on a group of CCCS teachers on reactions to games developed. Games to the left of the dotted line were written in semesters before spyral was used in Educational Game Development.}
+    \hspace{0.3in}
+    \parbox{\twocolwid}{\caption{Results of a survey on a group of CCCS teachers on reactions to games developed. Games to the left of the dotted line were written in semesters before spyral was used in Educational Game Development. \label{reaction}}}
 \end{figure}
   
 
