I'M TARGETTING ERIC WITH MISSLES

--- a/CHEP 13/poster.tex
+++ b/CHEP 13/poster.tex
@@ -83,7 +83,7 @@ Five years ago, CCCS received 1,400 XO laptops, low-cost computers developed by 
 
     \begin{block}{Spyral}
         \rmfamily{
-    		Spyral is a 2D sprite-based engine built on top of pygame designed to allow the rapid development of games, particularly those targetted at low performance platforms. It started as a library to optimize drawing during an early semester of the course, and grew to include many more features that previously had to be written by each team individually. Spyral now includes modules to handle:
+    		Spyral is a 2D sprite-based engine built on top of pygame designed to allow the rapid development of games, particularly those targeted at low performance platforms. It started as a library to optimize drawing during an early semester of the course, and grew to include many more features that previously had to be written by each team individually. Spyral now includes modules to handle:
     		\begin{itemize}
     			\item Images - loading and drawing graphics
     			\item Sprites - positioning images on the screen
