--- a/CHEP 13/poster.tex
+++ b/CHEP 13/poster.tex
@@ -200,7 +200,7 @@ Five years ago, CCCS received 1,400 XO laptops, low-cost computers developed by 
 	  \vskip2ex
 
 	  \begin{alertblock}{Conclusion}
-	    \rmfamily{The goal of the Educational Game Design class is for students to gain hard programming skills, soft human interaction skills, and experience the value of writing software with a real-world impact. To program for the XO laptop, undergraduates must first learn Python and Pygame, a Python package for game development;  in the past, gaining competence in these two tools has required a significant portion of the course and reduced the amount of time that can be spent eliciting input from teachers and designing, testing, and deploying games.  As evidenced by the data gathered from CCCS teachers, the quality of games created using our tools has increased significantly.  The creation of Platipy, Spyral, and Conspyre have reduced the amount of time undergraduates spent learning frameworks and optimizing their games, allowing them to focus more on the planning, development, creation of art assets, and testing.  This has led to better games and more satisfied clients.  
+	    \rmfamily{The goal of the Educational Game Design class is for students to gain hard programming skills, soft human interaction skills, and experience the value of writing software with a real-world impact. In the past, programming the XO using Python and Pygame has required a majority portion of the course and reduced the amount of time that can be spent eliciting input from teachers and designing, testing, and deploying games. The creation of Platipy, Spyral, and Conspyre have reduced the amount of time undergraduates spent learning frameworks and optimizing their games, allowing them to focus more on the planning, high-level design, creation of art assets, and testing. As evidenced by the data gathered from CCCS teachers, the quality of games created after introducing our tools has increased significantly. This has led to better games, more satisfied clients, and students with a better appreciation for creating educational games.  
 		}
 		\vspace{.5em}
 	  \end{alertblock}
