Some additions to the future-work section

--- a/CHEP 13/poster.tex
+++ b/CHEP 13/poster.tex
@@ -206,7 +206,7 @@ Five years ago, CCCS received 1,400 XO laptops, low-cost computers developed by 
 	  \end{alertblock}
 
 		\begin{block}{Future Work}
-			\rmfamily{There is significant room for improvement in Platipy, Spyral, and Conspyre.  There are several features of Spyral which are explained in the API but lack proper examples.  In the future, we plan to expand the documentation available on Platipy to include additional example projects that utilize more features of Spyral and can be used as the basis for new games.  We also plan on compiling a list of useful resources for game programmers including information on developing basic AI agents, incorporating multiplayer, and obtaining royalty-free audio and video.  We will also include all high-quality student projects for download so that they can be used by future students for reference.  Finally, the Spyral API will be expanded to efficiently utilize more features of the Pygame library.  }
+			\rmfamily{There is significant room for improvement in Platipy, Spyral, and Conspyre going forward.  A number of Spyral features aren't fully documented in platipy, and all of them could use more concrete examples. We also plan to expand Platipy to include more complete examples, including downloads of projects from previous semesters. We also plan on compiling a list of useful resources for game programmers including information on developing basic AI agents, incorporating multiplayer, and obtaining royalty-free audio and video. Additionally, every semester we elicit feedback from students using Spyral, and we plan to add more features to address common concerns and use cases. Lastly, Conspyre will receive additional work that includes more complete examples and the potential for an offline mode that allows syncing when network access is available. }
 		\end{block}
         \vskip2ex
 
